<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_menu_home"/>

    <item android:id="@+id/nav_category"
        android:icon="@drawable/ic_category"
        android:title="@string/title_menu_category"/>

    <item android:id="@+id/nav_friend"
        android:icon="@drawable/ic_friend"
        android:title="@string/title_menu_friend"/>

</menu>